fixed some spacing

--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@ body {
 
 h1 {
     margin: 0px;
-    line-height: 40px;
+    margin-bottom: 20px;
+    line-height: 30px;
     font-size: 60px;
     font-family: Century Gothic, sans-serif;
 }
